tests/cases/errors/parser/stmt_struct3.vnm
struct person {
  12345;
  age;
}

fn main() {
  let p = Person {name: "Hello world!", age: 26};
  print p.name;
  return 0;
}

main();
